--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -11,11 +11,11 @@
     max-width: 150px;
 }
 #icons i {
-    color: #0a616a;
+    color: #195780;
     margin-top: -10px;
 }
 #icons i:hover{
-    color: #114448;
+    color: #111e48;
 }
 
 @media only screen and (max-width: 600px) {
