--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -6,12 +6,21 @@
 }
 #projects .card {
     cursor: pointer;
+    max-height: 700px;
 }
 #projects .card:hover{
     background-color: #e9e9e9;
 }
 #projects .card__mobile-title{
-    border-radius: 0.5rem;
+    border-radius: 0.25rem;
+}
+#projects .card #link:hover{
+    color: rgb(1, 3, 124);
+}
+#projects .card #link-wrap{ 
+    white-space: nowrap;
+    padding-right: 10px;
+    overflow: hidden;
 }
 @media only screen and (max-width: 600px) {
     #projects{
