--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -22,11 +22,23 @@
     padding-right: 10px;
     overflow: hidden;
 }
+.desktop{
+    display: block;
+}
+.mobile{
+    display: none;
+}
 @media only screen and (max-width: 600px) {
     #projects{
         padding-top: 20px;
     }
     #content {
         padding: 20px;
+    }
+    .desktop{
+        display: none;
+    }
+    .mobile{
+        display: block;
     }
 }
