--- a/src/pages/work.css
+++ b/src/pages/work.css
@@ -5,7 +5,16 @@
     border-radius: 0.25rem;
     width: 100%;
     object-fit: cover;
-    max-height: 500px;
+    max-height: 400px;
+    background-color: rgb(202, 202, 202);
+}
+#work a {
+    padding: 0px;
+    color: #147580;
+}
+#work #timePeriod{
+    margin-top: -10px;
+    color: #516f72
 }
 @media only screen and (max-width: 600px) {
     #work{
