--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -24,8 +24,10 @@
 }
 #projects .card__image img {
   height: 100%;
-  object-fit: cover;
-  border-radius: 0.25rem;
+  width: 100%;
+  object-fit: contain;
+  border-radius: 10px;
+  padding: 10px;
 }
 #projects .card__image::after {
   background-color: #ffffff00;
