--- a/src/pages/Showcase/DemoCard.css
+++ b/src/pages/Showcase/DemoCard.css
@@ -1,15 +1,16 @@
 .demo-card {
   background-color: white;
   border-radius: 10px;
-  max-width: 200px;
-  max-height: 200px;
-  min-height: 200px;
-  min-width: 200px;
+  max-width: 250px;
+  max-height: 250px;
+  min-height: 250px;
+  min-width: 250px;
   display: flex;
   justify-content: center;
 }
 .demo-card:hover {
   cursor: pointer;
+  filter: brightness(0.95);
 }
 .demo-card img {
   border-radius: 10px;
